# cell2

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  setup.py
cell_flow_tracking.egg-info/: PKG-INFO  SOURCES.txt
client/: cli.py  flow_cmd.py  init_cmd.py  traj_cmd.py  video_cmd.py
example_notebooks/: MCF_Rab5a_Example.ipynb  MCF_Rab5a_notebook.ipynb  MCF_Rab5a_notebook_v1.ipynb  MCF_Rab5a_notebook_v2.ipynb
example_notebooks/example_images/: 11032024_gap_diff_12mil_stitched_s1.ome.tif
src/: Defaults.py  Flow.py  Memory.py  Repl.py  TiffStack.py  TiffVisualize.py  Tuning.py  __init__.py  client.py  flow.py  memory.py  old_memory.py  tiffstack.py  tiffvisualize.py  trajectory.py
src/cf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/client/: cli.py  cli_utils.py  flow_cmd.py  init_cmd.py  traj_cmd.py  video_cmd.py
test_images/: 20220929_MCF_Rab5a_WH_heterotypic_s1_SCALED.tif
utils/: TiffStack.py
