[project]
name = "cell-flow-tracking"
version = "0.1.0"
description = "This package tracks optical flow and trajectories of cells."
authors = [
    {name = "Ziyad Rahman",email = "zrahman3004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "tifffile (>=2025.5.26,<2026.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "optuna (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
